--- a/style.css
+++ b/style.css
@@ -41,6 +41,12 @@ th, td {
     border-bottom: 1px solid rgb(128, 128, 128);
 }
 
+div.main {
+  margin: 0 auto;
+  width: 50%;
+  padding: 10px;
+}
+
 .header {
     overflow: hidden;
     background-color: #070707;
@@ -80,3 +86,4 @@ th, td {
   .header-right a {
     margin-left: 10px;
   }
+
